--- a/addresses/index.html
+++ b/addresses/index.html
@@ -10,7 +10,7 @@
   <title>Addresses | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,25 +37,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -77,7 +77,7 @@
 	<div class="card card-body mb-5">
 		<h1 class="text-center">Opening Address: The End of Protest</h1>
 		<h2 class="text-center">Micah White</h2>
-		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="/img/speakers/mwhite.jpg" alt="Micah White"/>
+		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/mwhite.jpg" alt="Micah White"/>
 		<p>
 			Is protest broken? Micah White, co-creator of Occupy Wall Street, thinks so. Disruptive tactics have failed to halt the rise of Donald Trump. Movements ranging from Black Lives Matter to environmentalism are leaving activists frustrated. Meanwhile, recent years have witnessed the largest protests in human history. Yet these mass mobilizations no longer change society. Now activism is at a crossroads: innovation or irrelevance. Is it time to consider a paradigm shift in our approach to protest? What does the future of protest look like?
 		</p>
@@ -88,7 +88,7 @@
 		</div>
 		<h1 class="text-center">Closing Address: Saving Civilization with Space Colonization </h1>
 		<h2 class="text-center">Joe Strout</h2>
-		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="/img/speakers/jstrout.jpg" alt="Joe Strout"/>
+		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/jstrout.jpg" alt="Joe Strout"/>
 		<p>
 			Joe Strout’s programming career began at a young age, writing articles for "Nibble" magazine in high school. Joe obtained a bachelors in psychology from the University of Miami and a masters in neuroscience from the University of California, San Diego, but couldn't resist the call of code and became a full-time software developer after graduate school. He now runs a consulting business, crafting unique software solutions to a wide range of problems, and has worked with his two sons to create High Frontier, a space settlement simulation game that uses real physics. Joe is also a long-time member of the National Space Society and a Senior Associate of the Space Studies Institute.
 		</p>
