--- a/keynote/index.html
+++ b/keynote/index.html
@@ -10,7 +10,7 @@
   <title>Keynote | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,25 +37,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -78,7 +78,7 @@
     <div class="card-body">
       <h1 class="text-center">Professor Geoffrey Hinton</h1>
       <h2 class="text-center">Lionel Gelber Keynote Speaker</h2>
-      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="/img/speakers/hinton.png" alt="Prof. Geoffrey Hinton"/>
+      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/hinton.png" alt="Prof. Geoffrey Hinton"/>
       <p>
         Geoffrey Hinton received his PhD in Artificial Intelligence from Edinburgh in 1978.  After five years as a faculty member at Carnegie-Mellon he became a fellow of the Canadian Institute for Advanced Research and moved to the Department of Computer Science at the University of Toronto where he is now an emeritus distinguished professor. He is also a distinguished researcher at Google.
       </p>
@@ -92,7 +92,7 @@
   </div>
   <div class="card-deck mt-2">
     <div class="card">
-      <img class="card-img-top img-fluid" src="/img/de-grey.jpg" alt="Picture of Dr. Aubrey de Grey">
+      <img class="card-img-top img-fluid" src="../img/de-grey.jpg" alt="Picture of Dr. Aubrey de Grey">
       <div class="card-body">
         <h3 class="card-title">WAC 2017: Dr. Aubrey de Grey</h3>
         <p class="card-text">
@@ -101,7 +101,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top img-fluid" src="/img/snowden.png" alt="Picture of Edward Snowden">
+      <img class="card-img-top img-fluid" src="../img/snowden.png" alt="Picture of Edward Snowden">
       <div class="card-body">
         <h3 class="card-title">WAC 2015: Edward Snowden</h3>
         <p class="card-text">
@@ -110,7 +110,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top img-fluid" src="/img/avatar.png" alt="Decorative Image">
+      <img class="card-img-top img-fluid" src="../img/avatar.png" alt="Decorative Image">
       <div class="card-body">
         <h3 class="card-title">Previous WAC Speakers</h3>
         <p class="card-text">
