--- a/plenaries/china.html
+++ b/plenaries/china.html
@@ -10,7 +10,7 @@
   <title>China and Africa&#39;s New Era | The World Affairs Conference</title>
   <meta name="description" content="Africa experiences the fastest growing demography and economy in the world; its need for foreign investment makes the continent a target for all companies an...">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -32,7 +32,7 @@
 	<body>
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,25 +40,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>China and Africa's New Era</h1>
-						<img class="img-fluid plenary-img" src="/img/plen/china.png" alt="China and Africa's New Era picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/china.png" alt="China and Africa's New Era picture"/>
 						<p class="card-text">
 							<p>Africa experiences the fastest growing demography and economy in the world; its need for foreign investment makes the continent a target for all companies and nations that seek new market possibilities. Over the last decade, investing into mines, roads, airports, hospitals, highways, and dams, China has become one of Africa’s biggest trading partners. As skepticism about its intentions in increasing economic, cultural, and, therefore, political presence in the continent, the plenary questions its positive and negative, short-term and long-term implications. At a moment in time when President Trump puts America first, Sino-African relations not only shape the African continent, but the nature of international affairs.</p>
 
@@ -90,7 +90,7 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/rpulfer.jpg" alt="Rachel Pulfer">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/rpulfer.jpg" alt="Rachel Pulfer">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Rachel Pulfer</h2>
@@ -101,7 +101,7 @@ As a humanitarian who grew up in Swaziland, Lesotho and Papua New Guinea, Pulfer
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/rmedhora.jpg" alt="Rohinton P. Medhora">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/rmedhora.jpg" alt="Rohinton P. Medhora">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Rohinton P. Medhora</h2>
