--- a/plenaries/crypto.html
+++ b/plenaries/crypto.html
@@ -10,7 +10,7 @@
   <title>Cryptocurrencies: Friend or Foe | The World Affairs Conference</title>
   <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -32,7 +32,7 @@
 	<body>
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,25 +40,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>Cryptocurrencies: Friend or Foe</h1>
-						<img class="img-fluid plenary-img" src="/img/plen/crypto.svg" alt="Cryptocurrencies: Friend or Foe picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/crypto.svg" alt="Cryptocurrencies: Friend or Foe picture"/>
 						<p class="card-text">
 							<p>Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, banks have been on their feet to retain customers. Cryptocurrency is so different than any way we have ever managed our money because it is decentralized, meaning that no government owns cryptocurrencies, and therefore, no government can be in control of the currency. As well, cryptocurrencies can sustain transactions without ever having to use a bank.</p>
 
@@ -93,7 +93,7 @@ Our plenary prepares our generation - the first generation that will be fully im
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/adiiorio.png" alt="Anthony Diiorio">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/adiiorio.png" alt="Anthony Diiorio">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Anthony Diiorio</h2>
@@ -102,7 +102,7 @@ Our plenary prepares our generation - the first generation that will be fully im
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/vschmid.png" alt="Valentin Schmid">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/vschmid.png" alt="Valentin Schmid">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Valentin Schmid</h2>
