--- a/plenaries/earth.html
+++ b/plenaries/earth.html
@@ -10,7 +10,7 @@
   <title>The Global Food Crisis | The World Affairs Conference</title>
   <meta name="description" content="Humankind is growing, and we have a big problem. By the year 2050, the global population is expected to surpass 9 million people, with the majority being bor...">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -32,7 +32,7 @@
 	<body>
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,25 +40,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>The Global Food Crisis</h1>
-						<img class="img-fluid plenary-img" src="/img/plen/earth.png" alt="The Global Food Crisis picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/earth.png" alt="The Global Food Crisis picture"/>
 						<p class="card-text">
 							<p>Humankind is growing, and we have a big problem. By the year 2050, the global population is expected to surpass 9 million people, with the majority being born in what are developing nations today.  Research by The United States Department of Agriculture shows that the number of food insecure (hungry) people in sub-Saharan Africa will rise by a third and that in order to meet the demands of an exponentially growing population, the world’s collective agriculture production will have to rise approximately 70%. At a time where crop yields and natural resources are rapidly diminishing due to new diseases, urbanization and soil erosion caused by global warming weather phenomena, this task seems insurmountable. The underlying crisis has the potential not only to stunt the growth of humanity, but to cause hundreds of thousands, and possibly millions of people to starve death… Questions of how we will feed future generations? are ones that are worrying the global community. “The global food crisis” plenary will engage in an in depth discussion about how the world can effectively approach these issues. With a range of diverse opinions from very informed speakers who are experts in the issue, we will be examining  solutions from implementing more sustainable agriculture and environmental policy to governments issuing restrictions on reproductive rights in order to curtail population control.</p>
 
@@ -90,7 +90,7 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/jsumner.png" alt="Dr. Jennifer Sumner">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jsumner.png" alt="Dr. Jennifer Sumner">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Dr. Jennifer Sumner</h2>
@@ -99,7 +99,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/pdesrochers.jpg" alt="Dr. Pierre Doesrochers">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/pdesrochers.jpg" alt="Dr. Pierre Doesrochers">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Dr. Pierre Doesrochers</h2>
