--- a/plenaries/feminism.html
+++ b/plenaries/feminism.html
@@ -10,7 +10,7 @@
   <title>The Changing Face of Feminism | The World Affairs Conference</title>
   <meta name="description" content="Feminism often presents itself under a variety of forms along with different political movements, ideologies, and current social movements. Although feminism...">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -32,7 +32,7 @@
 	<body>
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,25 +40,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>The Changing Face of Feminism</h1>
-						<img class="img-fluid plenary-img" src="/img/plen/feminism.png" alt="The Changing Face of Feminism picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/feminism.png" alt="The Changing Face of Feminism picture"/>
 						<p class="card-text">
 							<p>Feminism often presents itself under a variety of forms along with different political movements, ideologies, and current social movements. Although feminism continues to change its shape and form due to various factors, its central theme is always and will always be around gender equality. In the 20th century, three different waves of feminism emerged with the shared purpose of seeking for gender equality. The first wave of feminism happened in the late-19th century and early 20th century. This incredible phenomenon brought about a plethora of changes in many societies, noticeably the Women’s suffrage. By the mid 20th century, the second wave of feminism focused on economic and social inequalities between genders. Feminists saw problems such as glass ceiling, wage gap in business and sexual harassment and tried to tackle them. One of their major success was the institution of the sexual harassment laws which aimed to protect women from sexual assaults. The third wave of feminism is a recent and ongoing one. It acts as a response to the some of the perceived failures of the second wave. It avoids what the second wave deems as the essentialist definition of femininity, which focuses too much on upper-middle-class women’s rights. Instead, the third wave acknowledges diversity within the feminist community and embraces a variety of different feminisms. We are not able to predict what the future of feminism will bring nor how it will differ from previous waves. However, learning about its fascinating evolution will surely help us gain an insight into its future.</p>
 
@@ -90,7 +90,7 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/ccodsi.png" alt="Caroline Codsi">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ccodsi.png" alt="Caroline Codsi">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Caroline Codsi</h2>
@@ -99,7 +99,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/kdogra.jpg" alt="Kavita Dogra">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/kdogra.jpg" alt="Kavita Dogra">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Kavita Dogra</h2>
