--- a/plenaries/nuclear.html
+++ b/plenaries/nuclear.html
@@ -10,7 +10,7 @@
   <title>Nuclear Weapons: Obsolete or the Future | The World Affairs Conference</title>
   <meta name="description" content="Hiroshima, Nagasaki, B-52s, tactical nuclear weapons, thermonuclear war–all these have been part of the lexicon of the modern world. As the 21st century prog...">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -32,7 +32,7 @@
 	<body>
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,25 +40,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>Nuclear Weapons: Obsolete or the Future</h1>
-						<img class="img-fluid plenary-img" src="/img/plen/nuclear.svg" alt="Nuclear Weapons: Obsolete or the Future picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/nuclear.svg" alt="Nuclear Weapons: Obsolete or the Future picture"/>
 						<p class="card-text">
 							<p>Hiroshima, Nagasaki, B-52s, tactical nuclear weapons, thermonuclear war–all these have been part of the lexicon of the modern world. As the 21st century progresses, are nuclear weapons a thing of the past or part of the strategic calculus for the future? Delivery systems, payloads, and bomb transportation have all advanced to such an extent that the use of nuclear weapons seems increasingly plausible. Has the celebrated “deterrent effect”–MAD, Mutually Assured Destruction–finally expired? What responsibility do international bodies have to regulate and control the proliferation of nuclear weaponry? As global tensions rise, the world must remain wary and ever vigilant.</p>
 
@@ -90,7 +90,7 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/jclearwater.jpg" alt="John Clearwater">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jclearwater.jpg" alt="John Clearwater">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">John Clearwater</h2>
@@ -99,7 +99,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/sjoshi.jpg" alt="Dr. Sharad Joshi">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sjoshi.jpg" alt="Dr. Sharad Joshi">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Dr. Sharad Joshi</h2>
