--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -10,7 +10,7 @@
   <title>Plenaries | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,25 +37,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -83,10 +83,10 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="/img/plen/china.png" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/china.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="/plenaries/china.html"><h4 class="card-title">China and Africa's New Era</h4></a>
+            <a href="../plenaries/china.html"><h4 class="card-title">China and Africa's New Era</h4></a>
             <p class="card-text">Will the 21st century belong to China? How is China extending its influence in the developing world? How will it impact the rest of the world and its power dynamics?</p>
           </div>
         </div>
@@ -97,10 +97,10 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="/img/plen/crypto.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/crypto.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="/plenaries/crypto.html"><h4 class="card-title">Cryptocurrencies: Friend or Foe</h4></a>
+            <a href="../plenaries/crypto.html"><h4 class="card-title">Cryptocurrencies: Friend or Foe</h4></a>
             <p class="card-text">What are their benefits and harms? How have they changed commerce and transactions? How are countries and central banks evolving and even switching to cryptocurrencies?</p>
           </div>
         </div>
@@ -111,10 +111,10 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="/img/plen/drug.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/drug.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="/plenaries/drugs.html"><h4 class="card-title">Drug Legalization in a Progressive World</h4></a>
+            <a href="../plenaries/drugs.html"><h4 class="card-title">Drug Legalization in a Progressive World</h4></a>
             <p class="card-text">Societies are already legalizing marijuana at growing rates. Does this provide more harms than benefits? As well, this opens the debate to legalizing other drugs. Where should governments/societies draw the line?</p>
           </div>
         </div>
@@ -125,10 +125,10 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="/img/plen/earth.png" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/earth.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="/plenaries/earth.html"><h4 class="card-title">The Global Food Crisis</h4></a>
+            <a href="../plenaries/earth.html"><h4 class="card-title">The Global Food Crisis</h4></a>
             <p class="card-text">What will we need to do to accommodate for a growing population on a planet with diminishing resources? GMO’s? New technology? Better policy?</p>
           </div>
         </div>
@@ -139,10 +139,10 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="/img/plen/feminism.png" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/feminism.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="/plenaries/feminism.html"><h4 class="card-title">The Changing Face of Feminism</h4></a>
+            <a href="../plenaries/feminism.html"><h4 class="card-title">The Changing Face of Feminism</h4></a>
             <p class="card-text">How should the feminist movement act in order to progress? What needs development the most?</p>
           </div>
         </div>
@@ -153,10 +153,10 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="/img/plen/nuclear.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/nuclear.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="/plenaries/nuclear.html"><h4 class="card-title">Nuclear Weapons: Obsolete or the Future</h4></a>
+            <a href="../plenaries/nuclear.html"><h4 class="card-title">Nuclear Weapons: Obsolete or the Future</h4></a>
             <p class="card-text">Are nuclear weapons still threats? Who should have access to them? How do they impact foreign relations and power dynamics?</p>
           </div>
         </div>
