--- a/schedule/index.html
+++ b/schedule/index.html
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,25 +37,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
